[gd_scene load_steps=3 format=3 uid="uid://ds4k8ou5aixuy"]

[ext_resource type="Script" path="res://niveles/menu/gui.gd" id="1_b285w"]
[ext_resource type="AudioStream" uid="uid://dg62gtx5fndre" path="res://efectos/musica/dead.mp3" id="2_s1fyl"]

[node name="Gui" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_b285w")

[node name="Container" type="Container" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="Container"]
custom_minimum_size = Vector2(1000, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Score: 0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.509804, 0.733333, 0.721569)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 72.0
offset_top = 234.0
offset_right = 1086.0
offset_bottom = 516.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "HAS MUERTO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "REINICIAR"

[node name="Button2" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SALIR"
icon_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="ColorRect"]
stream = ExtResource("2_s1fyl")

[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
